test-cases/negative/test_117_reserved_keyword_variable.lay
# negative test: using reserved keyword as variable name
# expected: parser should reject this

the variable if of type Number is 5


